src/objects/Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Account_Detail__c</fullName>
        <formula>HYPERLINK( Account__r.Id , Account__r.Name + &quot; - &quot; + Account__r.ShippingStreet + &quot; &quot; + Account__r.ShippingCity + &quot;, &quot; + Account__r.ShippingState , &quot;_top&quot; )</formula>
        <label>Account Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID_Text__c</fullName>
        <formula>Account__r.Salesforce_ID__c</formula>
        <label>Account ID Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>Record Type of Account</description>
        <formula>Account__r.RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Vision_Care_Effective_Date_Text__c</fullName>
        <formula>IF(ISBLANK(Account__r.Vision_Care_Effective_Date__c),
&apos;99999999&apos;,
LPAD(TEXT(YEAR(Account__r.Vision_Care_Effective_Date__c)),4,&apos;9&apos;) &amp; 
LPAD(TEXT(MONTH(Account__r.Vision_Care_Effective_Date__c)),2,&apos;0&apos;)  &amp;
LPAD(TEXT(DAY(Account__r.Vision_Care_Effective_Date__c)),2,&apos;0&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Vision Care Effective Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Vision_Care_End_Date_Text__c</fullName>
        <formula>IF(ISBLANK(Account__r.Vision_Care_End_Date__c),
&apos;99999999&apos;,
LPAD(TEXT(YEAR(Account__r.Vision_Care_End_Date__c)),4,&apos;9&apos;) &amp;
LPAD(TEXT(MONTH(Account__r.Vision_Care_End_Date__c)),2,&apos;0&apos;) &amp;
LPAD(TEXT(DAY(Account__r.Vision_Care_End_Date__c)),2,&apos;0&apos;)
)</formula>
        <label>Account Vision Care End Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Active_or_Future_Vision_Care_Relationshi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active or Future VC Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Campaigns__c</fullName>
        <label>Altair Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Altair_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify Altair Contacts on reports and call lists for DialSource.</description>
        <label>Altair Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Altair_Prospect_Rep__c</fullName>
        <formula>Account__r.Altair_Standard__c</formula>
        <label>Altair Prospect Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Altair_Rep__c</fullName>
        <description>Altair Sales Reps assigned to Account</description>
        <formula>Account__r.Altair_Reps__c</formula>
        <label>Altair Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAQH_ID_of_Contact__c</fullName>
        <formula>Contact__r.CAQH_ID__c</formula>
        <label>CAQH ID of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combo_Match__c</fullName>
        <formula>Contact_Id_Text__c &amp; &quot;_&quot; &amp;  Account_ID_Text__c</formula>
        <label>Combo Match</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id_Text__c</fullName>
        <formula>Contact__r.Salesforce_ID__c</formula>
        <label>Contact Id Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Primary_Email__c</fullName>
        <description>Displays the Primary Email Address of the associated Contact.</description>
        <formula>HYPERLINK(&quot;mailto:&quot;&amp; Contact__r.Email , Contact__r.Email , &quot;_self&quot;)</formula>
        <label>Contact Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Id_Text__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role Id Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Role Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Type__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)!=&apos;function&apos;) {(window.parent.location.href=&apos;/&quot; &amp; Id &amp; &quot;&apos;);}&quot;+ &quot; else {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;)}&quot;, TEXT(Type__c), &quot;_parent&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Role Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Vision_Care_Effective_Date_Text__c</fullName>
        <formula>IF(ISBLANK( Contact__r.Vision_Care_Effective_Date__c ),
&apos;99999999&apos;,
LPAD(TEXT(YEAR(Contact__r.Vision_Care_Effective_Date__c )),4,&apos;9&apos;) &amp;
LPAD(TEXT(MONTH(Contact__r.Vision_Care_Effective_Date__c )),2,&apos;0&apos;) &amp;
LPAD(TEXT(DAY(Contact__r.Vision_Care_Effective_Date__c )),2,&apos;0&apos;)
)</formula>
        <label>Contact Vision Care Effective Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Vision_Care_End_Date_Text__c</fullName>
        <formula>IF(ISBLANK(Contact__r.Vision_Care_End_Date__c),
&apos;99999999&apos;,
LPAD(TEXT(YEAR(Contact__r.Vision_Care_End_Date__c)),4,&apos;9&apos;) &amp;
LPAD(TEXT(MONTH(Contact__r.Vision_Care_End_Date__c)),2,&apos;0&apos;) &amp;
LPAD(TEXT(DAY(Contact__r.Vision_Care_End_Date__c)),2,&apos;0&apos;)
)</formula>
        <label>Contact Vision Care End Date Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Eye Care Professional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DS_Altair_Rep_ID__c</fullName>
        <description>Contains all the Altair Rep User IDs</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Altair Rep IDs</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Conversation_Count__c</fullName>
        <description>Tracks the number of conversations conducted through DialSource.</description>
        <label>DS Conversation Count Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS_Date_of_Last_Dispo__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Date of Last Dispo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DS_Datetime_of_Last_Disposition__c</fullName>
        <description>DialSource V3 &quot;Datetime of Last Disposition&quot; field for the Contact Role custom object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Datetime of Last Disposition</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DS_Last_Call_List_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Last Call List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Last_Disposition__c</fullName>
        <description>DialSource V3 &quot;Last Disposition&quot; field for the Contact Role custom object</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Last Disposition</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Pending_Event_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Pending Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DS_Pending_Task_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DS Pending Task Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DS_Total_Call_Count__c</fullName>
        <description>DialSource V3 field &quot;Total Call Count&quot; for the Contact Role custom object</description>
        <label>DS Total Call Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DS_VM_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Tracks the number of voicemails left through DialSource in the last 30 Days</description>
        <inlineHelpText>Tracks the number of voicemails left through DialSource in the last 30 Days</inlineHelpText>
        <label>DS VM Count Last 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Degree_on_Contact__c</fullName>
        <formula>TEXT(Contact__r.Degree__c)</formula>
        <label>Degree on Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_ID_of_Contact__c</fullName>
        <formula>Contact__r.Doctor_ID__c</formula>
        <label>Doctor ID of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Key__c</fullName>
        <formula>Account__r.Salesforce_ID__c + &quot;_&quot; +  Contact__r.Salesforce_ID__c + &quot;_&quot; +  TEXT(Type__c)</formula>
        <label>Duplicate Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_of_Account__c</fullName>
        <formula>Account__r.Email__c</formula>
        <label>Email of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax_of_Account__c</fullName>
        <formula>Account__r.Fax</formula>
        <label>Fax of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Calculation_Code__c</fullName>
        <formula>LEFT(TEXT( Account__r.Parent.Fee_Calculation_Code__c ), 1)</formula>
        <label>Fee Calculation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fee Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Code_of_Account__c</fullName>
        <formula>Account__r.VSP_GeoCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geo Code of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active_Role__c</fullName>
        <description>Result is 1 if Contact Role is Active and 0 if Inactive.</description>
        <label>Is Active Role?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_Account__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Name of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Contact__c</fullName>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp; Contact__r.LastName</formula>
        <label>Name of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Physical_City__c</fullName>
        <formula>Account__r.ShippingCity</formula>
        <label>Name of Physical City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Physical_County__c</fullName>
        <formula>Account__r.Physical_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Physical County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Physical_State__c</fullName>
        <formula>Account__r.ShippingState</formula>
        <label>Name of Physical State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Physical_Street__c</fullName>
        <formula>Account__r.ShippingStreet</formula>
        <label>Name of Physical Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Physical_Zip__c</fullName>
        <formula>Account__r.ShippingPostalCode</formula>
        <label>Name of Physical Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Case__c</fullName>
        <formula>HYPERLINK(&quot;/500/e?CF00NU0000003Kmw5=&quot; &amp; Name, &quot;New Case&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Event__c</fullName>
        <formula>HYPERLINK( &quot;/00U/e?who_id=&quot; + Contact__c + &quot;&amp;what_id=&quot; + Id , &quot;New Event&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Task__c</fullName>
        <formula>HYPERLINK( &quot;/00T/e?who_id=&quot; + Contact__c + &quot;&amp;what_id=&quot; +  Id  , &quot;New Task&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_of_Account__c</fullName>
        <formula>Account__r.Phone</formula>
        <label>Phone of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Fee_Portal_URL_Formula__c</fullName>
        <formula>IF( $Organization.Id = $Label.Prod_Org_Id , &apos;provider-and-fee-portal.vsp.com&apos;, &apos;provider-and-fee-portal-acpt.vsp.com&apos;)</formula>
        <label>Provider Fee Portal URL Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_NPI__c</fullName>
        <description>NPI of associated Contact record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Combo_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used by integration to uniquely identify a Contact role object since DataStage is having issues using 2 fields as unique key.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Combo Key</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Contact_Name__c</fullName>
        <formula>Status_Formula__c + &quot; - &quot; +  Contact__r.FirstName + &quot; &quot; + Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status - Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <formula>IF( End_Date__c &lt; Today(),&quot;Inactive&quot;,&quot;Active&quot;)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <defaultValue>$Organization.Id</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Task</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Doctor_Hours__c</fullName>
        <label>Total Doctor Hours</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Board Member/ Officer</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Doctor-Employee</fullName>
                </value>
                <value>
                    <fullName>Doctor-Owner</fullName>
                </value>
                <value>
                    <fullName>Doctor-Unspecified</fullName>
                </value>
                <value>
                    <fullName>Group Administrator</fullName>
                </value>
                <value>
                    <fullName>Lab Technician</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Office Administration</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>Optical Buyer</fullName>
                </value>
                <value>
                    <fullName>Optical Manager</fullName>
                </value>
                <value>
                    <fullName>Optician</fullName>
                </value>
                <value>
                    <fullName>Optician-Owner</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Profile_Name__c</fullName>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSP_Geo_Code__c</fullName>
        <formula>Account__r.VSP_GeoCode__c</formula>
        <label>VSP Geo Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VSP_Network_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VSP Network Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Contact_Role_Exception__c</fullName>
        <label>Vision Care Contact Role Exception</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOWN - Does not Own Dispensary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Care_Key__c</fullName>
        <formula>Account__r.Vision_Care_Location_Key__c</formula>
        <label>Vision Care Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Contact Role</label>
    <listViews>
        <fullName>Dr_Contact_Roles_w_start_end_dates</fullName>
        <columns>NAME</columns>
        <columns>Contact_Role_Type__c</columns>
        <columns>Email_of_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Name_of_Account__c</columns>
        <columns>Status_Formula__c</columns>
        <columns>Status__c</columns>
        <columns>VSP_Network_Provider__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Is_Active_Role__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Dr Contact Roles w start &amp; end dates</label>
        <sharedTo>
            <group>LOB_Admin_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Edit_On_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Type__c ) 

&amp;&amp;


(ISPICKVAL(PRIORVALUE( Type__c ), &quot;Doctor-Owner&quot;)

||

ISPICKVAL(PRIORVALUE( Type__c ), &quot;Doctor-Employee&quot;))

&amp;&amp;

NOT( $Permission.Credentialing_Data_Manager )

&amp;&amp;

VSP_Network_Provider__c = true</errorConditionFormula>
        <errorMessage>You cannot change the Contact Role Type for a Vision Care Provider. Please contact a Vision Care Network Administrator to make a change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDate_should_be_greater_than_EndDate</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt;  Start_Date__c</errorConditionFormula>
        <errorMessage>Setting the “Contact Role End date” that precedes the “Contact Role Start Date” is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR16_Restrict_Edit_on_Altair_Contact</fullName>
        <active>true</active>
        <description>Prevents users from editing &quot;Altair Contact&quot; custom field unless their Company name contains Altair.</description>
        <errorConditionFormula>(ISCHANGED( Altair_Contact__c )

&amp;&amp; 

NOT( $Profile.Name = &quot;System Administrator&quot; )) 

&amp;&amp;

NOT( CONTAINS( $User.CompanyName, &quot;Altair&quot;))</errorConditionFormula>
        <errorDisplayField>Altair_Contact__c</errorDisplayField>
        <errorMessage>You do not have permission to edit the &quot;Altair Contact&quot; field.</errorMessage>
    </validationRules>
</CustomObject>